docs: update page

--- a/nbdev/nbs/03_how_to_use_nbdev.ipynb
+++ b/nbdev/nbs/03_how_to_use_nbdev.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "source": [
     "- **Edit .ipynb** \\\n",
-    "Truy cập vào folder `/nbs` để tạo và edit các file notebook ở đây, chi tiết các viết nbdev notebook sẽ được nêu trong phần <font color=\"blue\">Directives</font>."
+    "Truy cập vào folder `/nbs` để tạo và edit các file notebook ở đây, chi tiết các viết nbdev notebook sẽ được nêu trong phần <a class=\"link\" href=\"04_directives.ipynb\">Directives</a>."
    ]
   },
   {
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Ngoài ra file `00_card.ipynb` cũng sẽ được update lên [GitHub Page](https://hoangtrung020541.github.io/nbdev_cards/card.html) khi push repository lên github thông qua `CI` của nbdev. Trong đó các số thứ tự trước tên file `ipynb` sẽ quyết định thứ tự của chúng trên page, file `index.ipynb` sẽ nằm đầu tiên (chi tiết các tạo page sẽ được nêu trong phần <font color=\"blue\">Create And Edit Page</font>).\n",
+    "> Ngoài ra file `00_card.ipynb` cũng sẽ được update lên [GitHub Page](https://hoangtrung020541.github.io/nbdev_cards/card.html) khi push repository lên github thông qua `CI` của nbdev. Trong đó các số thứ tự trước tên file `ipynb` sẽ quyết định thứ tự của chúng trên page, file `index.ipynb` sẽ nằm đầu tiên (chi tiết các tạo page sẽ được nêu trong phần <a class=\"link\" href=\"05_create_page.ipynb\">Create And Edit Page</a>).\n",
     "> ![](attachment:6.png)"
    ]
   },
