--- a/nbdev/nbs/06_beautiful_page.ipynb
+++ b/nbdev/nbs/06_beautiful_page.ipynb
@@ -191,7 +191,17 @@
     "        contents:\n",
     "          - markdown-layout.jpynb\n",
     "          - knitr-layout.jpynb\n",
-    "          - jupyter-layout.jpynb"
+    "          - jupyter-layout.jpynb\n",
+    "        \n",
+    "metadata-files: [nbdev.yml]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01e2da7a-965d-4dc6-a63e-da4b025302cf",
+   "metadata": {},
+   "source": [
+    "- lưu ý: Nhớ xóa `sidebar.yml` trong `#metadata-files`."
    ]
   },
   {
