--- a/nbdev/nbs/07_test.ipynb
+++ b/nbdev/nbs/07_test.ipynb
@@ -11,16 +11,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4b6fb998",
-   "metadata": {},
-   "source": [
-    "# Test\n",
-    "\n",
-    "> Test vài chức năng trong directive"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1e79a1f3",
@@ -28,8 +18,17 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from nbdev.showdoc import *\n",
-    " "
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b6fb998",
+   "metadata": {},
+   "source": [
+    "# Test\n",
+    "\n",
+    "> Test vài chức năng trong directive"
    ]
   },
   {
