docs: update beautiful page

--- a/nbdev/nbs/06_beautiful_page.ipynb
+++ b/nbdev/nbs/06_beautiful_page.ipynb
@@ -468,6 +468,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12828589-4443-4bbf-a49e-6797b686c3ee",
+   "metadata": {},
+   "source": [
+    "- Quarto cung cấp 25 themes có sẵn từ <a class=\"link\" href=\"https://bootswatch.com/\"> Bootswatch</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24b0df8e-d59c-4efe-af9d-f0bd6266ce84",
    "metadata": {},
    "source": [
@@ -535,8 +543,8 @@
     "    Test 1 sử dụng markdown.\n",
     "    Test 2 sử dụng html.\n",
     "\tĐối với Test 3 hơi phức tạp, liên quan đến cả html và css nên cần phải sử dụng \n",
-    "    file `styles.css` trong folder `nbs`. Cụ thể chúng ta sẽ tạo `class=\"link\"` ở \n",
-    "    đây, sau đó sẽ set các thuộc tính của class link tại file css như sau:\n",
+    "    file `styles.css` trong folder `nbs`. Cụ thể chúng ta sẽ tạo `class=\"link-hover\"` ở \n",
+    "    đây, sau đó sẽ set các thuộc tính của class link-hover tại file css như sau:\n",
     ":::"
    ]
   },
@@ -549,15 +557,17 @@
    "source": [
     "#| output: false\n",
     "#| eval: false\n",
-    ".link{\n",
-    "    color: #73D0FF;\n",
+    ".link-hover{\n",
+    "    color: #F0266F;\n",
     "    text-decoration: none;\n",
     "}\n",
-    ".link:hover{\n",
+    "\n",
+    ".link-hover:hover{\n",
     "    color: #686868;\n",
     "    text-decoration: none;\n",
     "}\n",
-    ".link:active{\n",
+    "\n",
+    ".link-hover:active{\n",
     "    color: black;\n",
     "    text-decoration: none;\n",
     "}"
